--- a/config.json
+++ b/config.json
@@ -1,5 +1,8 @@
 {
-  "token": "MTQzMjM5ODQzNjg2MjUyNTY0MA.Gv_c1q.mdPOSRWwY3QhdRbTf2ji3qq0BhgeA5q8cRIcIw",
-  "clientId": "1432398436862525640",
-  "guildId": "1381109138314231870"
+  "token": "TOKEN_BOT_DC",
+  "clientId": "IDDC",
+  "guildId": "ID",
+  "apiKey": "apikey"
 }
+
+
